# football-data-client

./: README.md  footballDataClient.cabal
example/: Main.hs
src/: Client.hs  Competition.hs  CompetitionFixture.hs  CompetitionTable.hs  Fixture.hs  Player.hs  Team.hs
