name:                footballDataClient
version:             0.1.0.0
-- synopsis:
description:         Client for api.football-data.org
homepage:            https://github.com/julienXX/football-data-client#readme
license:             BSD3
license-file:        LICENSE
author:              Julien Blanchard
maintainer:          julien@sideburns.eu
copyright:           2017 Julien Blanchard
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client
                     , Competition
                     , Team
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , servant
                     , servant-client
                     , aeson
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/julienXX/football-data-client
